# birdsql-benchmark

./: Dockerfile  Dockerfile.db_bench  GEMINI.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
ai_mock/: Dockerfile  main.py
scripts/: apply_descriptions.sh  download_resources.sh  parse_data.py
src/: config.py  main.py
src/api/: benchmark.py  evaluation.py  metadata.py
src/db/: session.py
src/models/: models.py  schemas.py
src/services/: benchmark_service.py  dataset.py  evaluation.py  metadata_service.py
