[project]
name = "t2sql-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.128.0",
    "openai>=2.15.0",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.46",
    "sqlmodel>=0.0.31",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.14",
    "types-requests>=2.32.4.20260107",
    "types-ujson>=5.10.0.20250822",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "src/service/database/alembic/*",
    "**/__pycache__/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
filterwarnings = [
    "ignore:The @wait_container_is_ready decorator is deprecated:DeprecationWarning"
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
exclude = ["src/service/database/alembic/*"]

[tool.mypy]
python_version = "3.13"
mypy_path = "src"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
exclude = ["ai_mock"]

[tool.pyright]
extraPaths = ["src"]
typeCheckingMode = "strict"

